--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
- <script src="3-6.js"></script>
+ <!-- <script src="3-6.js"></script> -->
+  <script src="3-7.js"></script>
 </body>
 </html>
